--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 ﻿body{
-    background-color: white;
+    background-color: #CCC;
     margin: 0;
     border: 0;
 }
@@ -9,4 +9,5 @@ canvas{
     margin-top: 100px;
     margin-left: auto; 
     margin-right: auto;
+    background-color: #FFF;
 }
